--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -450,6 +450,20 @@ body {
 
         }
 
+            div {
+
+            &:not(:first-child) {
+
+                @include breakpoint($tablet) {
+
+                    margin-left:250px;
+
+                }
+
+            }
+
+        }
+
     }
 
 
