--- a/sites/all/themes/atelierstheme/sass/layouts/_onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/_onecolumn.layout.scss
@@ -300,11 +300,14 @@ a {
     }
     .bloc2 {
         
+        padding-top: 56px;
         min-height: 340px;
         background-color: #00a886;
+
         @include breakpoint($laptop) {
             @include grid-span(6, 7);
         }
+        height: 341px;
         
     }
     display: block;
