wip mise en page offres-speciales detail

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -26,3 +26,4 @@
 @import "components/gallerie";
 @import "components/drop-down-menu";
 @import "components/map";
+@import "components/offres-speciales";
