--- a/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
@@ -69,7 +69,13 @@
              font-size: 20px;
 
             margin-top: 11px;
-            padding-top: 0px;
+            padding-top: 11px;
+
+                @include breakpoint($tablet) {
+
+                    padding-top: 0px;
+
+                }
 
             }
 
