--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -8,6 +8,7 @@
 @import "layouts/onecolumn.layout";
 @import "variables/variables";
 @import "variables/mixin";
+@import "variables/typos";
 
 @import "components/menu";
 @import "components/imagetitle";
@@ -27,3 +28,4 @@
 @import "components/drop-down-menu";
 @import "components/map";
 @import "components/offres-speciales";
+
