--- a/sites/all/themes/atelierstheme/sass/components/_autres-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_autres-services.scss
@@ -2,243 +2,21 @@
 @import "singularitygs";
 @import "../variables/variables";
 @import "../variables/mixin";
-
 .autres_services {
-
     //@include grid-span(12, 1);
-
-    padding:2vw 0 0 0;
-
-    .sub_autres_services {
-
-        background-color:$grey_2;
-        position: relative;
-        text-align: center;
-        padding: 5vw;
+     background-color: $grey_2;
+    .inner {
+        padding:1rem 0 2rem 0; ;
+        max-width:$laptop;
         margin:auto;
-
+        text-align:center;
+        
+        .atelier {
+            @include atelier();
+        }
+       
     }
-
-    .atelier{
-        @include atelier();
+    .triangles{
+        @include triangles(white,$grey_2);
     }
-
-    .container-title-pictos {
-
-        margin-top: 15px;
-        position: absolute;
-        left: 50%;
-        right: 50%;
-        @include translate(-50%,-50%);
-        margin-left: auto;
-        margin-right: auto;
-        width: 343px;
-
-        .ilot_gourmand {
-
-            margin-left: 12px;
-
-        }
-
-        .auto_bleue {
-
-            margin-left: 25px;
-
-        }
-
-        @include breakpoint($tablet) {
-
-            width: 479px;
-            margin-top: 30px;
-
-            .ilot_gourmand {
-
-                margin-left: 36px;
-
-            }
-
-            .auto_bleue {
-
-                margin-left: 43px;
-
-            }
-
-        }
-
-        @include breakpoint($laptop) {
-
-            width: 656px;
-            margin-top: 45px;
-
-            .ilot_gourmand {
-
-                margin-left: 68px;
-
-            }
-
-            .auto_bleue {
-
-                margin-left: 88px;
-
-            }
-
-
-        }
-
-        @include breakpoint($laptopl) {
-
-            width: 990px;
-            margin-top: 60px;
-
-            .ilot_gourmand {
-
-                margin-left: 188px;
-
-            }
-
-            .auto_bleue {
-
-                margin-left: 205px;
-
-            }
-
-        }
-
-        .title-pictos {
-
-            font-family: 'SourceSansProRegular';
-            text-transform: uppercase;
-            float: left;
-
-        }
-
-    }
-
-.triangles {
-
-            display: block;
-            position: relative;
-
-            height: 36px;
-
-            @include breakpoint($mobilem) {
-
-                height: 36px;
-
-            }
-
-            @include breakpoint($tablet) {
-
-                height: 46px;
-
-            }
-
-
-            @include breakpoint($laptop) {
-
-                height: 56px;
-
-            }
-
-            @include breakpoint($laptopl) {
-
-                height:66px;
-            }
-
-        .triangle-left {
-
-            @include grid-span(6,1);
-
-            border-bottom-width: 26px;
-            border-bottom-style: solid;
-            border-left: -40px solid transparent;
-            border-right: 102px solid transparent;
-            height: 0;
-            width: 50%;
-
-            position: relative;
-
-            @include breakpoint($mobilem) {
-
-                border-bottom-width: 36px;
-                border-left: -40px solid transparent;
-                border-right: 102px solid transparent;
-
-            }
-
-            @include breakpoint($tablet) {
-
-                border-bottom-width: 46px;
-                border-left: -40px solid transparent;
-                border-right: 102px solid transparent;
-
-            }
-
-
-            @include breakpoint($laptop) {
-
-                border-bottom-width: 56px;
-                border-left: -40px solid transparent;
-                border-right: 102px solid transparent;
-
-            }
-
-            @include breakpoint($laptopl) {
-
-                border-bottom-width: 66px;
-                border-left: -40px solid transparent;
-                border-right: 102px solid transparent;
-            }
-
-        }
-
-        .triangle-right {
-
-           @include grid-span(6,7);
-
-            border-bottom-width: 66px;
-            border-bottom-style: solid;
-            border-left: 102px solid transparent;
-            border-right: 0px solid transparent;
-            height: 0;
-            width: 50%;
-
-            position: relative;
-
-            @include breakpoint($mobilem) {
-
-                border-bottom-width: 36px;
-                border-left: 102px solid transparent;
-                border-right: 0px solid transparent;
-
-            }
-
-            @include breakpoint($tablet) {
-
-                border-bottom-width: 46px;
-                border-left: 102px solid transparent;
-                border-right: 0px solid transparent;
-
-            }
-
-            @include breakpoint($laptop) {
-
-                border-bottom-width: 56px;
-                border-left: 102px solid transparent;
-                border-right: 0px solid transparent;
-
-            }
-
-            @include breakpoint($laptopl) {
-
-                border-bottom-width: 66px;
-                border-left: 102px solid transparent;
-                border-right: 0px solid transparent;
-
-            }
-
-        }
-
-    }
-
 }
