--- a/sites/all/themes/atelierstheme/sass/components/_presentation.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_presentation.scss
@@ -12,16 +12,12 @@
 
             img {
 
-                margin:4vw;
-                width:9vw;
+                margin:1rem;
+             
 
             }
 
-            img:nth-child(2){
-
-                width:6vw;
-
-            }
+           
 
         }
 
