--- a/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
@@ -4,113 +4,14 @@
 
 .atelier {
     font-family: 'SourceSansProRegular';
-    //font-size: 4vw;
-
-    .triangle-left {
-
-        @include grid-span(6,1);
-
-        border-bottom-width: 26px;
-        border-bottom-style: solid;
-        border-left: -40px solid transparent;
-        border-right: 102px solid transparent;
-        height: 0;
-        width: 50%;
-
-        margin-top: -67px;
-        //z-index: 100000;
-
-        position: relative;
-
-        @include breakpoint($mobilem) {
-
-            border-bottom-width: 36px;
-            border-left: -40px solid transparent;
-            border-right: 102px solid transparent;
-            margin-top: -38px;
-
-        }
-
+    .triangles{
+        @include triangles(transparent,transparent);
+        margin-top:-40px;
         @include breakpoint($tablet) {
-
-            border-bottom-width: 46px;
-            border-left: -40px solid transparent;
-            border-right: 102px solid transparent;
-            margin-top: -48px;
-
+            margin-top:-50px;
         }
-
-        @include breakpoint($laptop) {
-
-            border-bottom-width: 56px;
-            border-left: -40px solid transparent;
-            border-right: 102px solid transparent;
-            margin-top: -58px;
-
-        }
-
-        @include breakpoint($laptopl) {
-
-            border-bottom-width: 66px;
-            border-left: -40px solid transparent;
-            border-right: 102px solid transparent;
-            margin-top: -68px;
-
-        }
-
     }
-
-    .triangle-right {
-
-       @include grid-span(6,7);
-
-        border-bottom-width: 66px;
-        border-bottom-style: solid;
-        border-left: 102px solid transparent;
-        border-right: 0px solid transparent;
-        height: 0;
-        width: 50%;
-        margin-top: -67px;
-
-        position: relative;
-
-        @include breakpoint($mobilem) {
-
-            border-bottom-width: 36px;
-            border-left: 102px solid transparent;
-            border-right: 0px solid transparent;
-            margin-top: -38px;
-
-        }
-
-        @include breakpoint($tablet) {
-
-            border-bottom-width: 46px;
-            border-left: 102px solid transparent;
-            border-right: 0px solid transparent;
-            margin-top: -48px;
-
-        }
-
-        @include breakpoint($laptop) {
-
-            border-bottom-width: 56px;
-            border-left: 102px solid transparent;
-            border-right: 0px solid transparent;
-            margin-top: -58px;
-
-        }
-
-        @include breakpoint($laptopl) {
-
-            border-bottom-width: 66px;
-            border-left: 102px solid transparent;
-            border-right: 0px solid transparent;
-            margin-top: -68px;
-
-        }
-
-    }
+   
 
 
     .atelier-body {
@@ -140,58 +41,8 @@
             font-style: italic;
         }
 
-        h1 {
-
-            font-family: 'SourceSansProSemiBold';
-            text-transform: uppercase;
-            font-size:20px;
-
-            @include breakpoint($laptop) {
-
-                font-size:30px;
-
-            }
-
-             @include breakpoint($laptopxl) {
-
-                font-size:35px;
-
-            }
-
-            margin: 25px 0;
-        }
-
-        h2 {
-
-            font-size:17px;
-
-            @include breakpoint($laptop) {
-
-                font-size:22px;
-
-            }
-
-             @include breakpoint($laptopxl) {
-
-                font-size:27px;
-
-            }
-
-            text-transform: uppercase;
-            margin: 25px 0;
-        }
-
-        ul {
-
-            margin-left: 15px;
-
-            li {
-
-                list-style: disc inside none;
-
-            }
-
-        }
+   
+       
 
     }
 
@@ -204,24 +55,14 @@
 
     }
 
-    .atelier-header-bg-web {
-        display: none;
-
-        @include breakpoint($laptop) {
-
-            display: block;
-
+    .atelier-header-bg {
+       img{
+            display:block;
         }
+        
 
     }
-    .atelier-header-bg-mobile {
-
-        display: block;
-        @include breakpoint($laptop) {
-            display: none;
-        }
-
-    }
+   
 
     .block-orange {
         width: 100%;
@@ -230,23 +71,33 @@
     }
 
     .atelier-color {
+       
+        text-align:left;
+        &.text {
+            max-width:$laptop;
+            margin:0 auto;
+            padding: 2rem;
+            ul {
 
-        &.text-presentation {
+                margin-left: 15px;
 
-            margin-top:20px;
-
-            @include breakpoint($laptop) {
-
-                margin-top:30px;
-
+                li {
+                    position: relative;
+                    &:before{
+                        content:"";
+                        height: 7px;
+                        width: 7px;
+                        position:absolute;
+                        top:5px;
+                        left:-15px;
+                        border-radius:50%;
+                    }
+                    margin-left:15px;
+                    list-style: none inside none;
+                }
             }
 
-            @include breakpoint($laptopl) {
-
-                margin-top:40px;
-
-            }
-
+        
         }
 
     }
@@ -263,4 +114,38 @@
 
     }
 
+}
+.atelier-liens {
+   .active {
+        padding-bottom: 0.1rem;
+        border-bottom: 2.5px solid white;
+    }
+    position: absolute;
+    width: 100%;
+    bottom: 0.5rem;
+    font-size: 1.1rem;
+    a{
+     color:white;    
+        
+    }
+    
+    @include breakpoint($tablet) {
+          font-size:1.3rem;
+         bottom: 1rem;
+        .active {
+            padding-bottom: 0.2rem;
+           
+     }
+    }
+    .services-lien,
+    .actualites-lien {
+        font-weight: 500;
+        text-transform:uppercase;
+        text-align: center;
+        padding-left : 0rem;
+        display:inline-block;
+        width:50%;
+       
+    }
+    
 }
