--- a/sites/all/themes/atelierstheme/sass/components/_imagetitle.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_imagetitle.scss
@@ -12,12 +12,12 @@
 
     }
     .title {
-
-        @include translate(-50%,-50%);
+        width:100%;
+        @include translate(0%,-50%);
         position:absolute;
         font-family: "PermanentMarker";
         color: #ffffff;
-
+        text-align: center;
         font-size: 7.5vw;
 
         @include breakpoint($laptopl) {
@@ -25,7 +25,7 @@
         }
 
         top: 50%;
-        left: 50%;
+        left: 0%;
 
     }
 
