--- a/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
@@ -226,3 +226,40 @@
             }
         }
     }
+
+@mixin btn_don($color){
+    background-color: $color;
+    color:white;
+    cursor:pointer;
+    transition: all 200ms;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    margin:20px 0;
+
+    @include breakpoint($laptop) {
+
+        margin-top:30px;
+
+    }
+
+    @include breakpoint($laptopl) {
+
+        margin-top:40px;
+
+    }
+
+    padding: 10px 30px;
+    text-align: center;
+
+    background-repeat: no-repeat;
+
+    background-size : 15% 40%;
+    background-position: 100% center;
+    position: relative;
+    border : 2px solid $color;
+    background-image : url(../images/f_blanches/f_droite.svg);
+
+    width:200px;
+
+}
