deplacement code de onecolumn.layout vers global + couleur liens presentation (qui sommes - nous)

--- a/sites/all/themes/atelierstheme/sass/components/_home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home.scss
@@ -60,6 +60,7 @@
         .par-bienvenue {
             font-family: 'SourceSansProLight';            
             margin: 2rem 0;
+            font-size:21px;
             
             @include breakpoint($tablet) {
                 display:inline-block;
