--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -4,7 +4,19 @@
 
 body {
 
+    font-size: 17px;
     font-family: 'SourceSansProRegular';
+
+}
+
+a {
+    &:hover,
+    &:link,
+    &:active,
+    &:visited {
+        color: black;
+        text-decoration: red;
+    }
 
 }
 
@@ -21,10 +33,6 @@ body {
 }
 
 .text-presentation {
-
-  
- 
-
     
 
     p {
@@ -405,10 +413,6 @@ body {
 
 }
 
-
-   
-
-    
 
 .contact {
 
