trait vert sur lien active dans sous - menu déroulant ateliers

--- a/sites/all/themes/atelierstheme/sass/components/_drop-down-menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_drop-down-menu.scss
@@ -111,13 +111,21 @@
             }
 
             a {
- border-bottom: none;
+
+                border-bottom: none;
+
                 &:hover,
                 &.active{
                    
                     border-bottom: none;
                 }
                 color:white;
+
+                &.active-trail {
+
+                    border-bottom: 3px solid $green;
+
+                }
 
             }
 
