--- a/sites/all/themes/atelierstheme/sass/components/_autres-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_autres-services.scss
@@ -19,4 +19,14 @@
     .triangles{
         @include triangles(white,$grey_2);
     }
+    a{
+
+        &:hover {
+
+            color:black;
+
+        }
+
+    }
+
 }
