--- a/sites/all/themes/atelierstheme/sass/variables/_typos.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_typos.scss
@@ -1,13 +1,15 @@
 body{
     font-size: 17px;
-    
+    line-height: 1.5rem;
 }
+
 h1{
    text-transform: uppercase;
     font-size: 1.5rem;
     font-weight: 700;
     margin: 0.5rem 0;
 }
+
 h2{
     text-transform: uppercase;
     font-size: 1.2rem;
