--- a/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
@@ -4,7 +4,7 @@
     transform : translate($x,$y);
 }
 
-@mixin btn($color){
+@mixin btn($color) {
     background-color: transparent;
     cursor:pointer;
     transition: all 200ms;
@@ -39,12 +39,16 @@
     
     width:200px;
 
-    &:hover{
+    &:hover {
         color: white;
         background-color: $color;
         border : 2px solid $color;
         background-image : url(../images/f_blanches/f_droite.svg);
        
+    }
+
+    &:hover > a {
+        color: white;
     }
 
 }
