wip modifs actu

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -28,4 +28,5 @@
 @import "components/drop-down-menu";
 @import "components/map";
 @import "components/offres-speciales";
+@import "components/date";
 
