--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -348,19 +348,19 @@ body {
 
         }
 
-            div {
-
-            &:not(:first-child) {
-
-                @include breakpoint($tablet) {
-
-                    margin-left:250px;
-
-                }
-
-            }
-
-        }
+//            div {
+//
+//            &:not(:first-child) {
+//
+//                @include breakpoint($tablet) {
+//
+//                    margin-left:250px;
+//
+//                }
+//
+//            }
+//
+//        }
 
     }
 
