--- a/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
@@ -6,135 +6,48 @@
 
     .actus {
 
+        overflow: hidden;
+
+        .img-actu {
+
+             @include breakpoint($tablet) {
+                @include grid-span(3,1);
+                 //margin-right: -15%;
+             }
+
+        }
+
+        .date {
+
+            @include breakpoint($tablet) {
+                @include grid-span(2,11);
+             }
+
+        }
+
+        .text-actus {
+
+            @include breakpoint($tablet) {
+                @include grid-span(7,4);
+                //margin-left: 20%;
+             }
+
+        }
+
+        .readmore {
+
+            @include grid-span(7,4);
+            margin-left: 0%;
+            clear: both;
+
+            @include breakpoint($tablet) {
+                @include btn_actu(#FF0000);
+                margin-bottom: 20px;
+             }
+
+        }
+
         margin: 50px 50px;
-
-        .views-field-field-image {
-
-            @include breakpoint($laptop) {
-
-                float: left;
-
-            }
-
-        }
-
-        .views-field-field-title {
-
-            text-transform: uppercase;
-            font-weight: 900;
-            font-size:22px;
-            padding:10px 0px;
-        }
-
-        .views-field-body {
-
-            display: none;
-
-            @include breakpoint($laptop) {
-
-                display: block;
-
-            }
-
-            p {
-
-                text-align: left !important;
-
-            }
-
-        }
-
-        .views-field-created-1 {
-
-            max-width:10000px;
-
-            @include breakpoint($tablet) {
-
-                float: right;
-                margin-top: -47px;
-
-            }
-
-            background-image: url("../images/calendrier.svg");
-            background-repeat: no-repeat;
-
-            width:3em;
-            height: 3em;
-
-             span {
-
-             text-align: center;
-             display: block;
-             color: white;
-             font-size: 20px;
-
-            margin-top: 11px;
-            padding-top: 11px;
-
-                @include breakpoint($tablet) {
-
-                    padding-top: 0px;
-
-                }
-
-            }
-
-        }
-
-        .views-field-created {
-
-            max-width:10000px;
-            margin-left:0px !important;
-            margin-top: 9px;
-
-            @include breakpoint($tablet) {
-
-                text-align: right;
-
-            }
-
-            text-transform: uppercase;
-
-        }
-
-        div {
-
-            &:not(:first-child) {
-
-                @include breakpoint($tablet) {
-
-                    margin-left:250px;
-
-                }
-
-            }
-
-        }
-
-        .views-field-view-node {
-
-            margin-left: 0px;
-            display: block;
-
-            &:hover {
-
-                color:white;
-
-            }
-
-            a {
-
-                text-decoration: none;
-
-                &:hover {
-
-                    color:white;
-
-                }
-
-            }
-
-        }
 
     }
 
